refactor : split Game class to Dealer, Game and rename RankingSeparator as RankingCalculator